<resources>
    <string name="app_name">NFCTest</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">CANCEL</string>
    <string name="nfc_logo_title">Place the device near an NFC Tag</string>
    <string name="nfc_logo_description">NFC Logo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_google_sign_in">Sign in with Google</string>
    <string name="action_tic_tac_toe">#</string>

    <string name="web_client_id">80974609362-q48riru16h7108bcf4t0oo9mnqeearca.apps.googleusercontent.com</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="tag_read_success">TAG read successfully</string>
    <string name="tag_read_cancel">TAG read canceled</string>
    <string name="nfc_write_success">TAG written successfully</string>
    <string name="nfc_write_canceled">TAG write canceled</string>
    <string name="qrcode_read_success">QR Code read successfully</string>
    <string name="qrcode_read_fail">QR Code read fail</string>
    <string name="qrcode_read_canceled">QR Code read canceled</string>
    <string name="no_users">No owners found</string>
    <string name="google_signin_fail">Google Sign In failed</string>
    <string name="firebase_auth_fail">Authentication failed.</string>
    <string name="camera_parmission_denied">Permission denied</string>
    <string name="nfc_not_available">NFC is not available</string>
    <string name="qrcode_detector_not_setup">QR Code detector not set up</string>
    <string name="google_services_not_available">Google Services not available</string>
    <string name="nfctag_not_recognized">NFC Tag not recognized</string>
    <string name="nfctag_not_formatted">NFC Tag not formatted</string>
    <string name="nfctag_not_supported">NFC Tag not supported</string>
    <string name="nfctag_unknown_error">Unknown error</string>
    <string name="user_playing">User already playing, try another time</string>
    <string name="send_request">Send game request</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="request_refused">Game request refused</string>
    <string name="touch_to_start">Touch to start a new game</string>
    <string name="accept">ACCEPT</string>
    <string name="refuse">REFUSE</string>
    <string name="opponent_left">Opponent left</string>
    <string name="tie">Tie!!!</string>
    <string name="game_not_started">Game not started</string>
    <string name="new_game_request">New game request</string>
    <string name="fail">Fail</string>
    <string name="finished">Finished</string>
    <string name="paused">Paused</string>
    <string name="no_gallery">No Gallery app</string>
    <string name="allow_write_storage">Please allow write storage permission</string>
    <string name="profile_picture">Profile picture</string>
    <string name="action_profile">Profile</string>
    <string name="buddies_list_title">BUDDIES</string>
    <string name="following_list_title">FOLLOWING</string>
    <string name="pet_name_hint">Name</string>
    <string name="pet_picture_title">Profile Picture</string>
    <string name="upload_button_text">Upload</string>
    <string name="pet_breed_hint">Breed</string>
    <string name="pet_age_hint">Age</string>
    <string name="photo">Photo</string>
    <string name="write_something">Write something</string>
    <string name="add">Add</string>
</resources>
