<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_name_hint"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pet_breed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_name">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_breed_hint"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pet_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_breed">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pet_age_hint"
            android:inputType="textCapWords"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/pet_picture_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_age"
        android:layout_marginTop="16dp"
        android:text="@string/pet_picture_title"/>

    <ProgressBar
        android:id="@+id/upload_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:progress="0"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@id/pet_picture_title"/>

    <Button
        android:id="@+id/upload_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/upload_progress_bar"
        android:text="@string/upload_button_text"/>

</RelativeLayout>